Fix first line aligning

--- a/Frontend(React)/src/components/homepage/Homepage.css
+++ b/Frontend(React)/src/components/homepage/Homepage.css
@@ -92,7 +92,7 @@ body {
   width: 95%;
   background: white;
   bottom: 22vw;
-  left: 7vw;
+  left: 5vw;
 }
 
 .yours {
